--- a/src/app/education/developers-institute/page.mdx
+++ b/src/app/education/developers-institute/page.mdx
@@ -35,7 +35,7 @@ A transformative 2-year software development programme that combined academic ex
 
 ### Comprehensive Research Process
 
-The decision to leave aviation wasn't taken lightly. After spending years building expertise in a field I loved, the prospect of starting over felt both terrifying and exhilarating. I spent months researching every possible pathway into software development, attending information sessions, talking to graduates, and even auditing some university lectures to get a feel for different approaches.
+The decision to leave aviation wasn't taken lightly. After spending years building expertise in a field I loved, the prospect of starting over felt both terrifying and exhilarating. I spent months researching every possible pathway into software development, attending information sessions, talking to graduates  to get a feel for different approaches.
 
 Traditional universities offered prestige and comprehensive computer science theory, but I was concerned about spending years learning concepts that might be outdated by the time I graduated. Bootcamps promised rapid results, but I worried about the depth of understanding I'd gain in just a few weeks. Self-teaching appealed to my independent nature, but I recognised the value of structured learning and peer collaboration.
 
@@ -70,7 +70,6 @@ const StudentDashboard = () => {
 - **HTML5 & CSS3:** Semantic markup, Flexbox, Grid, responsive design
 - **JavaScript (ES6+):** Modern syntax, async/await, destructuring, modules
 - **React:** Hooks, context, state management, component architecture
-- **CSS Frameworks:** Bootstrap, Tailwind CSS for rapid development
 
 #### Backend Development
 ```javascript
@@ -132,7 +131,7 @@ CMD ["npm", "start"]
 
 **Infrastructure Skills:**
 - **Docker:** Containerisation, multi-stage builds, docker-compose
-- **AWS Services:** EC2, S3, RDS, Elastic Beanstalk deployment
+- **AWS Services:** ECS, RDS and CodePipeline
 - **Version Control:** Git workflows, branching strategies, collaborative development
 - **Testing:** Jest unit testing, integration testing, TDD methodology
 
@@ -140,36 +139,9 @@ CMD ["npm", "start"]
 - **Input Validation:** Sanitisation and validation of user data
 - **SQL Injection Prevention:** Parameterised queries and ORM usage
 - **XSS Protection:** Content Security Policy implementation
-- **Authentication Security:** Password hashing, session management
+- **Authentication Security:** Password hashing, session management, Auth0
 - **HTTPS Implementation:** SSL certificate configuration and security headers
 
-## Project-Based Learning Excellence
-
-### Real-World Application Development
-Rather than theoretical exercises, every project solved actual business problems:
-
-#### 1. Dreams Built Construction Management (Major Project)
-**Challenge:** Inefficient manual timesheet and job costing processes
-**Solution:** Full-stack web application with React, Node.js, MongoDB
-**Technologies Used:** React, Redux, Node.js, Express, MongoDB, Auth0, AWS
-**Business Impact:** Eliminated 8+ hours weekly administrative overhead
-
-#### 2. E-Commerce Platform
-**Project Scope:** Complete online shopping experience
-**Features Developed:**
-- Product catalogue with search and filtering
-- Shopping cart with session persistence
-- Secure payment processing integration
-- Admin dashboard for inventory management
-- Responsive design for mobile commerce
-
-#### 3. Social Media Application
-**Technical Implementation:**
-- Real-time messaging with WebSocket integration
-- File upload and image processing
-- User authentication and authorisation
-- News feed algorithm development
-- Progressive Web App functionality
 
 ### Agile Development Methodology
 
@@ -249,44 +221,11 @@ The time management required was brutal but transformative. I learned to optimis
 - **Presentation Skills:** Demonstrating projects to technical and non-technical audiences
 - **Conflict Resolution:** Managing disagreements in team environments
 
-## Long-Term Impact & Career Foundation
-
-### Immediate Industry Success
-**Career Progression:**
-- **Rapid Employment:** Secured role during studies demonstrating marketability
-- **Skill Application:** Immediately productive in professional environment
-- **Continuous Learning:** Foundation for ongoing skill development
-- **Leadership Development:** Mentoring capabilities developed through peer support
-
-### Foundation for Advanced Learning
-**Post-Graduation Growth:**
-- **Infrastructure Expertise:** Advanced AWS and DevOps skills
-- **Performance Optimisation:** Database tuning and application scaling
-- **Architectural Design:** System design and scalability planning
-- **Team Leadership:** Mentoring junior developers and leading projects
-
-## Programme Outcomes & Recognition
-
-### Graduate Success Metrics
-**Cohort Performance:**
-- **Employment Rate:** 95% employment within 6 months of graduation
-- **Industry Satisfaction:** High employer satisfaction with graduate skills
-- **Career Progression:** Rapid advancement in first industry roles
-- **Alumni Network:** Strong professional network supporting career growth
-
-### Industry Partnerships
-**Real-World Connections:**
-- **Placement Opportunities:** Industry placements with local technology companies
-- **Guest Speakers:** Regular industry expert presentations
-- **Project Sponsors:** Real client projects providing authentic experience
-- **Recruitment Pipeline:** Direct pathway to employment with partner companies
 
 ## Links
 
 - 🎓 **Institution Website:** [developers.ac.nz](https://developers.ac.nz)
-- 💼 **Industry Placement:** NumberWorks'nWords Software Developer role
-- 🏆 **Academic Excellence:** A+ grade achievement while working full-time
-- 🚀 **Career Success:** Immediate industry integration and advancement
+
 
 ---
 
