--- a/src/app/education/waikato-aviation/page.mdx
+++ b/src/app/education/waikato-aviation/page.mdx
@@ -11,12 +11,10 @@ export const education = {
   location: 'Hamilton, New Zealand',
   description: 'Comprehensive 2-year commercial pilot training programme covering all aspects of professional aviation including advanced aircraft systems, instrument flight procedures, multi-engine operations, and flight instruction.',
   achievements: [
-    'Commercial Pilot Licence (CPL) - First attempt pass',
-    'Multi-Engine Instrument Rating (MEIR) - First attempt pass', 
-    'C-Category Flight Instructor Rating - First attempt pass',
-    '100% first-time pass rate on all written examinations',
-    '100% first-time pass rate on all practical flight tests',
-    'Completed all airline preparation examinations',
+    'Commercial Pilot Licence (CPL)',
+    'Multi-Engine Instrument Rating (MEIR)', 
+    'C-Category Flight Instructor Rating',
+    'Completed all airline examinations',
   ]
 }
 
@@ -46,10 +44,13 @@ This foundation provided exceptional preparation for commercial training, demons
 ## Commercial Training Programme Structure
 
 ### Comprehensive Curriculum Overview
+
 **Training Philosophy:** Integrated approach combining theoretical knowledge with practical flight experience, emphasising safety, professionalism, and real-world operational competency.
 
 **Programme Duration:** 2 years (2015-2017)
+
 **Training Format:** Full-time intensive study with progressive practical applications
+
 **Aircraft Fleet:** Modern training aircraft including single and multi-engine platforms
 
 ## Phase 1: Commercial Pilot Licence (CPL)
@@ -199,22 +200,6 @@ Instructional Design:
 - **Motivation Techniques:** Maintaining student engagement and progress
 - **Error Analysis:** Understanding and correcting common student mistakes
 
-### B-Category Advanced Instructor Rating
-
-#### Advanced Instructional Techniques
-**Senior Instructor Capabilities:**
-- **Multi-Engine Instruction:** Complex aircraft training delivery
-- **Instrument Flight Instruction:** Advanced IFR training techniques
-- **Commercial Standard Training:** Preparing students for professional operations
-- **Instructor Mentoring:** Training and supervising junior instructors
-
-#### Regulatory & Standards Knowledge
-**Training Organisation Management:**
-- **Training Standards:** Maintaining consistent instructional quality
-- **Regulatory Compliance:** Ensuring training meets civil aviation requirements
-- **Documentation Systems:** Student record keeping and progress tracking
-- **Quality Assurance:** Monitoring and improving training effectiveness
-
 **Achievement:** 100% first-attempt pass rate on all instructor rating examinations and assessments
 
 ## Professional Development & Airline Preparation
@@ -223,93 +208,19 @@ Instructional Design:
 **Advanced Commercial Aviation Knowledge:**
 ```
 ATPL Curriculum Modules:
-├── Air Law & Procedures
-├── Aircraft General Knowledge
-├── Flight Performance & Planning
+├── Air Law
+├── Instruments and Navigation Aids
+├── Flight Planning
 ├── Human Performance & Limitations
 ├── Meteorology
-├── Navigation
-├── Operational Procedures
-├── Principles of Flight
-└── Radio Navigation
+├── Flight Navigation - General
+└── Advanced Aerodynamics, Performance, and Systems Knowledge
 ```
 
-**Comprehensive Study Programme:**
-- **14 Subject Areas:** Complete theoretical knowledge for airline operations
-- **Complex Calculations:** Advanced performance and navigation calculations
-- **International Standards:** Global aviation regulations and procedures
-- **Professional Operations:** Airline standard operating procedures
-
-### Cathay Pacific Selection Success
-**Airline Career Opportunity:**
-- **Competitive Selection:** Successfully completed rigorous airline selection process
-- **Boeing 777 Training:** Selected for wide-body jet operations
-- **International Operations:** Prepared for long-haul international flying
-- **Professional Recognition:** Achievement demonstrated exceptional competency
-
-**COVID-19 Impact:** Training postponement and eventual family-focused decision to remain in New Zealand
-
-## Training Excellence & Academic Achievement
-
-### Perfect Academic Record
-**Exceptional Performance Metrics:**
-- **Written Examinations:** 100% first-attempt pass rate across all subjects
-- **Practical Tests:** 100% first-attempt pass rate on all flight tests
-- **Instructor Assessments:** Outstanding performance in teaching evaluations
-- **Professional Standards:** Consistently exceeded minimum requirements
-
-### Accelerated Progression
-**Efficient Training Completion:**
-- **No Re-examinations:** Never required to repeat any examination or test
-- **Ahead of Schedule:** Completed training modules faster than average timelines
-- **Immediate Employment:** Offered instructor position upon programme completion
-- **Rapid Advancement:** Quick progression through instructor rating levels
-
-## Skills Development & Transferable Competencies
-
-### Technical Proficiency
-**Complex System Management:**
-- **Multi-tasking Excellence:** Simultaneous management of multiple aircraft systems
-- **Precision Standards:** Exact adherence to performance criteria and procedures
-- **Emergency Response:** Calm and effective response to abnormal situations
-- **Continuous Learning:** Adaptation to new aircraft types and procedures
-
-### Leadership & Communication
-**Professional Interaction Skills:**
-- **Clear Communication:** Precise and professional verbal communication
-- **Teaching Ability:** Complex concept explanation and demonstration
-- **Stress Management:** Performance under pressure and time constraints
-- **Team Coordination:** Effective crew resource management and collaboration
-
-### Problem-Solving & Decision-Making
-**Critical Thinking Skills:**
-- **Risk Assessment:** Systematic evaluation of operational risks and hazards
-- **Resource Management:** Optimal utilisation of available resources and information
-- **Strategic Planning:** Long-term planning with contingency development
-- **Analytical Thinking:** Data interpretation and logical conclusion development
-
-## Industry Recognition & Professional Standing
-
-### Professional Achievements
-**Aviation Industry Recognition:**
-- **Instructor Excellence:** Rapid advancement to senior instructor positions
-- **Student Success:** High student pass rates and positive feedback
-- **Safety Record:** Perfect safety record throughout flying career
-- **Professional Reputation:** Recognised for instructional quality and professionalism
-
-### Career Transition Foundation
-**Transferable Skills to Technology:**
-- **System Thinking:** Understanding of complex integrated systems
-- **Attention to Detail:** Precision requirements transferring to code quality
-- **Continuous Learning:** Adaptation to rapidly changing technical environments
-- **Teaching Excellence:** Mentorship capabilities in software development roles
 
 ## Links
 
 - ✈️ **Training Organisation:** [waikatoaviation.co.nz](https://waikatoaviation.co.nz)
-- 🎓 **Commercial Pilot Training:** Foundation for systematic problem-solving
-- 👨‍🏫 **Instructor Excellence:** Educational methodology applied to software development
-- 🏆 **Perfect Academic Record:** 100% first-attempt pass rate achievement
 
 ---
 
