--- a/src/app/work/waikato-aviation/page.mdx
+++ b/src/app/work/waikato-aviation/page.mdx
@@ -1,8 +1,11 @@
 import { ProjectLayout } from '@/components/ProjectLayout'
 import logoWaikatoAviation from '@/images/logos/waikato-aviation.webp'
+import feature from './feature.png'
+import Image from 'next/image'
 
 export const work = {
   company: 'Waikato Aviation',
+  title: 'Waikato Aviation',
   description: 'Premier flight training organisation based in Hamilton, New Zealand, specialising in commercial pilot training, recreational flying, and aviation education with modern aircraft fleet and experienced instructors.',
   slug: 'waikato-aviation',
   logo: logoWaikatoAviation,
@@ -48,27 +51,17 @@ export default (props) => <ProjectLayout project={work} {...props} />
 
 # Waikato Aviation: Professional Aviation Career Journey
 
+<Image src={feature} alt="Waikato Aviation feature" />
+
 A comprehensive career progression through New Zealand's aviation industry, from administrative support to senior flight instruction leadership, culminating in an airline job offer and transition to software development during the COVID-19 pandemic.
 
 ## Aviation Background & Foundation
 
 ### Early Aviation Passion
 
-My love affair with aviation began at 13 when most kids were obsessing over video games. Every weekend, I'd head to the local airfield, absorbing everything I could about flying. There's something magical about the moment you realise you can actually control an aircraft—when the theory clicks with reality and you're no longer just a passenger but a pilot.
+My passion for aviation began at 13 when most kids were obsessing over video games. Every weekend, I'd head to the local airfield, absorbing everything I could about flying. There's something magical about the moment you realise you can actually control an aircraft—when the theory clicks with reality and you're no longer just a passenger but a pilot.
 
 The competitive flying circuit became my proving ground. Winning two consecutive national competitions wasn't just about the trophies; it was about pushing myself to achieve precision under pressure, something that would serve me well in every future endeavour. The real milestone came on my 16th birthday when I took my first solo flight—the youngest age legally possible. I still remember the mixture of terror and exhilaration as the instructor stepped out of the aircraft and said, "She's all yours." That moment of absolute responsibility, where success or failure rested entirely on my decisions and skills, shaped my approach to challenges for life.
-
-### Formal Training Excellence (2015-2017)
-**Qualifications Achieved:**
-- **Commercial Pilot Licence (CPL):** Fundamental commercial aviation qualification
-- **Multi-Engine Instrument Rating (MEIR):** Advanced multi-engine and instrument flight training
-- **C-Category Instructor Rating:** Initial flight instructor certification
-- **B-Category Instructor Rating:** Advanced instructor qualification
-
-**Academic Performance:**
-- **100% first-time pass rate** on all written examinations
-- **100% first-time pass rate** on all practical flight tests
-- **Accelerated progression** through training modules
 
 ## Role Progression & Achievements
 
@@ -76,16 +69,11 @@ The competitive flying circuit became my proving ground. Winning two consecutive
 **Operational Management:**
 While completing intensive pilot training, managed critical business operations:
 
-- **Flight scheduling coordination:** Managed complex aircraft and instructor scheduling for 20+ aircraft fleet
+- **Flight scheduling coordination:** Managed aircraft and instructor scheduling for 10+ aircraft fleet
 - **Customer service excellence:** Handled inquiries, bookings, and student progression tracking
 - **Financial administration:** Processed payments, managed accounts receivable, and reconciled billing
 - **Payroll management:** Calculated instructor payments based on flight hours and ground instruction
 - **Regulatory compliance:** Maintained training records and aviation authority documentation
-
-**Key Achievements:**
-- Streamlined booking processes reducing scheduling conflicts by 30%
-- Implemented efficient filing systems for student training records
-- Maintained 100% accuracy in payroll processing during tenure
 
 ### Flight Instructor (2016-2018)
 **Educational Philosophy:**
@@ -115,7 +103,6 @@ Training Delivery Methods:
 - **High pass rates:** Students consistently achieved above-average examination results
 - **Positive feedback:** Received outstanding student evaluations for teaching quality
 - **Professional preparation:** Students well-prepared for airline and commercial operations
-- **Safety record:** Maintained perfect safety record throughout instructional career
 
 ### Senior Flight Instructor (2018-2019)
 **Advanced Specialisation:**
@@ -177,57 +164,10 @@ Navigation + Weather + Regulations = Safe Flight Planning
 - **Comprehensive Understanding:** Emphasised 'why' alongside 'how' in all instruction
 - **Continuous Feedback:** Provided regular, constructive feedback for improvement
 
-## Professional Development & Recognition
-
-### Industry Recognition
-- **Rapid Promotion:** Advanced from instructor to deputy chief within 3 years
-- **Peer Respect:** Frequently consulted by other instructors for guidance
-- **Student Success:** Students consistently praised instructional quality
-- **Safety Leadership:** Contributed to organisation's excellent safety record
-
-### Airline Career Opportunity
-**Cathay Pacific Selection (2020):**
-- **Job Offer:** Selected for Boeing 777 First Officer training in Hong Kong
-- **Training Postponement:** COVID-19 pandemic delayed programme multiple times
-- **Family Decision:** Chose to remain in New Zealand prioritising family stability
-- **Career Transition:** Decision led to exploration of software development career
-
-## Transition to Technology
-
-### Technology Interest Development
-During 2020 lockdown, identified inefficiencies in aviation training systems:
-- **LMS Limitations:** Recognised constraints of generic learning management systems
-- **Custom Solutions:** Began developing pilot-specific online courses
-- **Private Tutoring:** Created digital materials for individual student support
-- **Innovation Drive:** Discovered passion for creating educational technology solutions
-
-### Skills Translation
-Aviation experience provided strong foundation for software development:
-- **Problem-Solving:** Complex system analysis and solution development
-- **Attention to Detail:** Critical precision requirements in both fields
-- **Communication:** Ability to explain complex concepts clearly
-- **Leadership:** Team management and mentorship experience
-- **Continuous Learning:** Adaptation to rapidly changing technical environments
-
-## Industry Impact & Legacy
-
-### Training Excellence
-- **Student Success:** High completion rates and examination pass rates
-- **Instructor Development:** Mentored 10+ junior instructors to competency
-- **Safety Culture:** Contributed to organisation's excellent safety reputation
-- **Innovation:** Introduced new teaching methodologies adopted by other instructors
-
-### Professional Standards
-- **Quality Improvement:** Elevated training standards throughout organisation
-- **Process Enhancement:** Streamlined administrative and training processes
-- **Documentation Excellence:** Improved record-keeping and compliance systems
-- **Customer Satisfaction:** Maintained high levels of customer satisfaction and retention
 
 ## Links
 
 - 🌐 **Waikato Aviation:** [waikatoaviation.co.nz](https://waikatoaviation.co.nz)
-- ✈️ **Aviation Background:** Foundation for systematic problem-solving approach
-- 🎓 **Teaching Excellence:** Educational methodology applied to software development mentorship
 
 ---
 
