--- a/src/app/education/developers-institute/page.mdx
+++ b/src/app/education/developers-institute/page.mdx
@@ -170,11 +170,11 @@ gh pr create --title "Add user authentication" --body "Implements JWT-based auth
 
 ### Balancing Two Full-Time Commitments
 
-Taking on full-time study while working full-time at NumberWorks'nWords was probably insane in retrospect, but it turned out to be one of the most valuable experiences of my life. Picture this: finishing a full day of debugging production issues and optimising database queries, then logging into evening classes to learn advanced React patterns or database design principles.
+One year into my full-time studies, I started working full-time at NumberWorks'nWords, which created an interesting challenge in balancing both commitments. I adapted by watching recorded class videos when I couldn't attend live sessions and completing all course material outside of working hours.
 
-The synergy was incredible. Concepts I learned in class would immediately find application in my work the next day, while real-world challenges at NumberWorks'nWords would spark questions that enriched classroom discussions. My projects consistently earned the highest ratings in the cohort, not because I was naturally gifted, but because I could test every concept against real-world constraints and user needs.
+The combination proved incredibly valuable. Concepts I learned in my studies would immediately find application in my work, while real-world challenges at NumberWorks'nWords would deepen my understanding of the theoretical principles covered in class. This practical context enhanced my academic projects, allowing me to approach assignments with a deeper understanding of how concepts apply in professional environments.
 
-The time management required was brutal but transformative. I learned to optimise every moment, whether that was reviewing code during my lunch break or working on assignments during weekend mornings before family time. The A+ grades across all modules weren't just academic achievements—they represented a period of intense growth where I was simultaneously learning and applying skills in real-time.
+The experience required careful time management but was ultimately transformative. I completed assignments during evenings and weekends, ensuring my work commitments never compromised my academic performance. The A+ grades across all modules reflected not just academic achievement, but a period of intense growth where I was simultaneously learning and applying skills in a professional environment.
 
 ### Industry Integration Success
 **Employment During Studies:**
