--- a/src/app/projects/dreams-built/page.mdx
+++ b/src/app/projects/dreams-built/page.mdx
@@ -143,6 +143,7 @@ Integrated document storage for:
 ## Links
 
 - 🌐 **Live Application:** [dreamsbuilt.co.nz](https://dreamsbuilt.co.nz)
+- 📦 **GitHub Repository:** [dreams-built](https://github.com/BaileyNepe/dreams-built-v2)
 - 🔐 **Demo Access:** Available upon request
 
 ---
