--- a/src/app/projects/dreams-built/page.mdx
+++ b/src/app/projects/dreams-built/page.mdx
@@ -86,11 +86,8 @@ What amazed me most was watching the ripple effects. Payroll processing, which u
 ### 📅 Intelligent Scheduling System
 
 **Before:** Phone calls and confusion about daily assignments
-**After:** Centralised calendar with automatic notifications
 
-**Functionality:**
-- Drag-and-drop job assignment interface
-- Employee availability tracking
+**After:** Centralised calendar with job visibility
 
 
 ## Technical Highlights
